# Bass-machine

./: .gitignore  Cargo.toml  README.md
src/: filter.rs  interp.rs  lib.rs  voiceset.rs
src/Tables/: 12-Screamer.wav.asd
src/interp/: filter.rs  interp.rs
src/voiceset/: filter.rs  interp.rs  modmatrix.rs
wavetable/: Cargo.toml
wavetable-plugin/: Cargo.toml
wavetable-plugin/src/: lib.rs
wavetable-plugin/src/voiceset/: filter.rs
wavetable-plugin/tests/process/: main.rs
wavetable/src/: lib.rs  resources.rs  util.rs  voiceset.rs
wavetable/src/voiceset/: filter.rs  interp.rs  modmatrix.rs  resampling.rs
wavetable/src/voiceset/interp/: fir.rs
wavetable/tests/process/: main.rs
