[package]
name = "wave_table"
version = "0.2.0"
authors = ["rasmu"]
edition = "2018"

[dependencies]
vst = { git = "https://github.com/rust-dsp/rust-vst" }
hound = "3.4.0"

# FIXME(will): integration tests require an actual rust crate to be exported, not a cdylib
#[lib]
#name = "wave_table"
#crate-type = ["cdylib"]
